# MDP

./: LICENSE  Project.toml  README.md
Applications/snap/: ZBLpotential.jl  ZBLpotential.m  ZBLpotential.m~  ZBLpotentialInP.m  snapInP.coeff  snapInP.m  snapTA06A.jl  snapTA06A.m  snapTA06A.m~  snapTA06A.txt  snapWBe.coeff  snapWBe.m
Applications/training/: LJpotential.jl  LJpotential.m  genpot.m  matlab_workspace.mat  potential.jl  potential.m  test.m
C++/Calculation/: Calculation.cpp  Calculation.cpp~  Calculation.h
C++/Common/: cudamem.h  mdpcommon.h  mdpcommon.h~  mdpcore.h  mdpcore.h~  mdpcpucore.h  mdpcpucore.h~  mdpgpucore.h  mdpgpucore.h~  pblas.h
C++/Configuration/: Configuration.cpp  Configuration.cpp~  errormsg.cpp  gpuDeviceInfo.cpp  ioutilities.cpp  readdata.cpp  readdata.cpp~  setunits.cpp
C++/Core/: cpuArrayOperations.cpp  cpuAtom.cpp  cpuAtom.cpp~  cpuClebschGordan.cpp  cpuCoordinateTransformations.cpp  cpuCore.cpp  cpuDomain.cpp  cpuFixes.cpp  cpuNeighCount.cpp  cpuNeighborList2D.cpp  cpuRadialSphericalHarmonics.cpp  cpuRandom.cpp  cpuSnap.cpp  cpuSnap2.cpp  cpuSnap2.cpp~  cpuSort.cpp  cpuSphericalHarmonicsBessel.cpp  cpuVelocityIntegration.cpp  cpuVirialTally.cpp  genlib.m  genstr.m  gpuArrayOperations.cu  gpuComputes.cu  gpuCoordinateTransformations.cu  gpuCore.cu  gpuCubAPI.cu  gpuDomain.cu  gpuEnergyForceTally.cu  gpuFixes.cu  gpuNeighCount.cu  gpuRadialSphericalHarmonics.cu  gpuRadialSphericalHarmonics.cu~  gpuSnap.cu  gpuSnap.cu~  gpuSnap2.cu  gpuSnap2.cu~  gpuSphericalHarmonicsBessel.cu  gpuVelocityIntegration.cu  gpuVelocityIntegration.cu~  gpuVirialTally.cu  (+17 more)
C++/Descriptors/: Descriptors.cpp  Descriptors.cpp~  mdpsnap.cpp  mdpsnap.cpp~
C++/Integration/: Integration.cpp  Integration.cpp~  Integration.h
C++/Main/: cpuMDP  inputfiledescription.txt  macMDP  main.cpp
C++/Potentials/: cpuEmpiricalPotentials.cpp  cpuEmpiricalPotentials.dylib  cpuPaira.cpp  cpuPairaGradient.cpp  cpuPaircGradient.cpp  cpuPotentials.cpp  cpuSingleaGradientGradient.cpp  cpuTripletaGradient.cpp  cpuTripletbGradient.cpp  gpuApp.cpp  gpuEmpiricalPotentials.cu  gpuEmpiricalPotentials.dylib  gpuPaira.cu  gpuPairaGradient.cu  gpuPairb.cu  gpuPotentials.cpp  gpuQuadrupletbGradient.cu  gpuSingleaGradient.cu  gpuSingleaGradientGradient.cu  gpuTripletaGradient.cu  gpuTripletb.cu  gpuTripletcGradient.cu  opuApp.cpp  opuPaira.cpp  opuPairaGradient.cpp  opuPairb.cpp  opuPaircGradient.cpp  opuQuadrupletbGradient.cpp  opuTripletbGradient.cpp  opuTripletcGradient.cpp
C++/Regression/: Regression.cpp  Regression.h
Documentation/: Implemented-Equations-Summary.tex  JuliaCon2020-Abstract.txt  Summary-Implemented-Equations.tex
Installation/: CMakeLists.txt  buildcorelibraries.m  buildexecutable.m  buildexecutable.m~  findexec.m  getcompilers.m  getcompilers.m~  install.m  install.m~  setpath.jl  setpath.m
Julia/Gencode/: Gencode.jl  compile.jl  cppfiles.jl  derivassign.jl  genbo2.jl  genbo2grad.jl  genbo3.jl  gendensity.jl  genpair.jl  genpairgrad.jl  genpotential.jl  genquadruplet.jl  genquadrupletgrad.jl  gensingle.jl  gensinglegrad.jl  gentriplet.jl  gentripletgrad.jl  potential.jl  single.jl  syminit.jl  symsassign.jl  test.jl  varsassign.jl
Julia/Postprocessing/: mdp.jl
exec/: CMakeCache.txt  Makefile  cmake_install.cmake  cpuMDP  libcpuEmpiricalPotentials.dylib
installation/: setup.jl
src/: GOLFF.jl  MDP.jl  coordinate-transform.jl  coordinatetransform.jl  force-calculation.jl  forcecalculation.jl  input-loading.jl  loadinput.jl  sphericalharmonics.jl
test/: runtests.jl
(+667 files in other folders)
